--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "myapp",
-  "version": "0.0.0",
-  "private": true,
+  "name": "npm-proyecto",
+  "version": "1.0.0",
+  "description": "Este proyecto va a desarrollar una red social",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/santiagojordan/proyectoGrupo9-.git"
+  },
+  "author": "Camila Wagner",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/santiagojordan/proyectoGrupo9-/issues"
+  },
+  "homepage": "https://github.com/santiagojordan/proyectoGrupo9-#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "multer": "^1.4.3",
+    "mysql2": "^2.3.3"
   }
 }
