--- a/myapp/package.json
+++ b/myapp/package.json
@@ -4,6 +4,7 @@
   "description": "Este proyecto va a desarrollar una red social",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
